# procure-pro-iso

./: .env.example  .gitignore  DATABASE_SETUP.md  Makefile  Procfile  README.md  alembic.ini  app.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
alembic/: README  env.py
alembic/versions/: 20241231_000000_initial_baseline.py  20251231_120000_initial_migration.py
api/: __init__.py  models.py  routes.py  schemas.py
api/utils/: __init__.py  rfq_parser.py  tbe_calculator.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  categories.py  quotations.py  rfq.py  vendors.py
app/core/: config.py  database.py  exceptions.py  pagination.py  security.py
app/models/: __init__.py  rfq.py  user.py  vendor.py
app/schemas/: __init__.py  rfq.py  vendor.py
app/services/: __init__.py  email.py  rfq.py  vendor.py
config/: __init__.py  settings.py
database/: __init__.py  connection.py  migration_runner.py  schema.sql
database/seeds/: seed_data.sql
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md
frontend/: .env.example  .gitignore  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  DataTable.tsx  FilterBar.tsx  Layout.tsx  RFQCard.tsx  StatCard.tsx  index.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  EquipmentAnalysis.tsx  TimelineView.tsx  VendorComparison.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts  mockData.ts
scripts/: __init__.py  init_database.py  parse_rfq_example.py  setup.py  test_connection.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  reports.py  tbe.py  vendors.py
src/config/: __init__.py  database.py  settings.py
src/models/: __init__.py  tbe.py  vendor.py
src/procure_pro_iso/: __init__.py  config.py
src/procure_pro_iso/database/: __init__.py  connection.py  models.py  repository.py
src/procure_pro_iso/models/: __init__.py  rfq.py
src/procure_pro_iso/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  pdf_parser.py  rfq_parser.py
src/procure_pro_iso/services/: __init__.py  rfq_service.py
src/repositories/: __init__.py  tbe_repository.py  vendor_repository.py
src/services/: __init__.py  comparison_matrix.py  compliance_scorer.py  ranking_engine.py  report_generator.py  tbe_scoring.py  tco_calculator.py
tests/: __init__.py  conftest.py  test_api.py  test_comparison_matrix.py  test_compliance_scorer.py  test_csv_parser.py  test_database.py  test_excel_parser.py  test_health.py  test_models.py  test_pdf_parser.py  test_ranking_engine.py  test_report_generator.py  test_rfq.py  test_rfq_parser.py  test_service.py  test_tbe_scoring.py  test_tco_calculator.py  test_validation.py  test_vendors.py
tests/fixtures/: __init__.py  multi_vendor_rfq.csv  sample_rfq.csv
